kubernetes/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nop-commerce-service
spec:
  type: NodePort
  selector:
    app: nopcommerce
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32326
